# ridvan-chatbot-project

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
api/: __init__.py  main.py  models.py
api/services/: __init__.py  openai_service.py
api/utils/: __init__.py  config.py
public/: index.html
