[project]
name = "ridvan-chatbot"
version = "1.0.0"
description = "AI Chatbot for RidvanYigit.com"
authors = [
    {name = "Rıdvan Yiğit", email = "ridvanyigit@gmx.net"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "openai>=1.3.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "jinja2>=3.1.2",
    "aiofiles>=23.2.1",
    "pydantic-settings>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
]